# langmuir

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile.in  README  README.md  agent.h  chargeagent.cpp  chargeagent.h  checkpointer.cpp  checkpointer.h  cubicgrid.cpp  cubicgrid.h  defects.cl  drainagent.cpp  drainagent.h  fluxagent.cpp  fluxagent.h  grid.h  griddisplay.cpp  griddisplay.h  gridview.cpp  gridview.h  gzipper.cpp  gzipper.h  hoppingagent.cpp  hoppingagent.h  inputparser.cpp  inputparser.h  kernel.cl  keyvalueparser.cpp  keyvalueparser.h  langmuir.cpp  langmuiropencl.cpp  langmuirview.cpp  linearpotential.cpp  linearpotential.h  logger.cpp  logger.h  (+46 more)
CL/: cl_gl_ext.h
LangmuirPython/: Makefile  README.md  setup.py
LangmuirPython/analyze/: book.py  calculate.py  charges.py  chk2vtk.py  combine.py  coulomb.py  equil.py  fluxplot.py  gather.py  show2D.py  showVTK.py  solar.py  table.py  time.py  transistor.py
LangmuirPython/batch/frank/: gpu.batch  scan.batch  shared.batch
LangmuirPython/batch/hutch/: scan.sge  single.sge
LangmuirPython/convert/: chk2csv.py  chk2vtk.py  image2chk.py
LangmuirPython/doc/: Makefile
LangmuirPython/doc/source/: conf.py  database.rst  datfile.rst  find.rst  fit.rst  index.rst  ivline.rst  parameters.rst  plot.rst
LangmuirPython/ga2d/: __init__.py  analyze.py  create_block.py  create_simulations.py  curves.py  dla.py  fft2D.py  ga.py  ga_analyze.py  grow.py  lines.py  modify.py  plot.py  sample.py  score.cache  template.inp
LangmuirPython/ga2d/generators/: __init__.py  block.py  curves.py  dla.py  iso.py  (+5 more)
LangmuirPython/input/: array2input.py  comb3D.py  convolve2D.py  convolve3D.py  surface3D.py
LangmuirPython/langmuir/: __init__.py  analyze.py  checkpoint.py  common.py  database.py  datfile.py  find.py  fit.py  grid.py  ivcurve.py  ivline.py  parameters.py  plot.py  qaverage.py  regex.py  surface.py  vtkutils.py
LangmuirPython/misc/: contour3D.py  cpdepth.py  create_rst.py  fit.py  make_bin.py  template.py  test.py
LangmuirPython/plot/: plot2D.py  plotConv.py  plotFFT.py  plotRDF.py  plotStats.py
LangmuirPython/surface/: auto.py  convolution.py  fft.py  ideal.py  isotropic.py  morph.py  pepper.py  rdf.py  stats.py
LangmuirPython/test/: template.py  test.py
LangmuirPython/utils/: append.py  check.py  compare.py  done.py  extend.py  image2traps.py  pretty.py  reset.py  scan.py  script.py  set.py
cmake/modules/: FindGLEW.cmake  FindOpenCL.cmake
doc/: .gitignore  Doxyfile  Makefile  mainpage.dox
doc/manual/: manual.sty  manual.tex
examples/: gyroid.chk
misc/examples/: barriers.inp  defects.inp  negative.inp  positive.inp  transistor.inp  traps.inp
misc/manual/: Makefile.ini
scripts/: input  lvsample.inp  sample.inp  setvar  vmd.init
scripts/Examples/: barriers.inp  defects.inp  negative.inp  positive.inp  solar.inp  transistor.inp  traps.inp
src/: CMakeLists.txt  Makefile  compile_frank
src/QGLViewer/: CMakeLists.txt  camera.cpp  camera.h  config.h  constraint.cpp  constraint.h  domUtils.h  frame.cpp  frame.h  keyFrameInterpolator.cpp  keyFrameInterpolator.h  manipulatedCameraFrame.cpp  manipulatedCameraFrame.h  manipulatedFrame.cpp  manipulatedFrame.h  mouseGrabber.cpp  mouseGrabber.h  qglviewer.cpp  qglviewer.h  quaternion.cpp  quaternion.h  saveSnapshot.cpp  vec.cpp  vec.h
src/QGLViewer/QGLViewer/: camera.cpp  constraint.cpp  frame.cpp  keyFrameInterpolator.cpp  manipulatedCameraFrame.cpp  manipulatedCameraFrame.h  manipulatedFrame.cpp  manipulatedFrame.h  mouseGrabber.cpp  qglviewer.cpp  qglviewer_fr.ts  quaternion.cpp  saveSnapshot.cpp  vec.cpp
src/QGLViewer/QGLViewer/VRender/: AxisAlignedBox.h  BSPSortMethod.cpp  BackFaceCullingOptimizer.cpp  EPSExporter.cpp  Exporter.cpp  Exporter.h  FIGExporter.cpp  NVector3.cpp  NVector3.h  Optimizer.h  ParserGL.cpp  ParserGL.h  Primitive.cpp  Primitive.h  PrimitivePositioning.cpp  PrimitivePositioning.h  SortMethod.h  TopologicalSortMethod.cpp  Types.h  VRender.cpp  VRender.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  VisibilityOptimizer.cpp  gpc.cpp  gpc.h
src/QGLViewer/VRender/: AxisAlignedBox.h  BSPSortMethod.cpp  BackFaceCullingOptimizer.cpp  EPSExporter.cpp  Exporter.cpp  Exporter.h  FIGExporter.cpp  NVector3.cpp  NVector3.h  Optimizer.h  ParserGL.cpp  ParserGL.h  Primitive.cpp  Primitive.h  PrimitivePositioning.cpp  PrimitivePositioning.h  SortMethod.h  TopologicalSortMethod.cpp  Types.h  VRender.cpp  VRender.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  VisibilityOptimizer.cpp  gpc.cpp  gpc.h
src/cmake/modules/: FindOpenCL.cmake  FindQGLViewer.cmake
src/langmuir/: CMakeLists.txt  langmuir.cpp
src/langmuirCore/: CMakeLists.txt  chargeagent.cpp  checkpointer.cpp  clparser.cpp  cubicgrid.cpp  drainagent.cpp  fluxagent.cpp  kernel.cl  keyvalueparser.cpp  nodefileparser.cpp  openclhelper.cpp  output.cpp  pbsgpuparser.cpp  potential.cpp  rand.cpp  simulation.cpp  sourceagent.cpp  world.cpp  writer.cpp
src/langmuirCore/include/: agent.h  chargeagent.h  checkpointer.h  clparser.h  cubicgrid.h  drainagent.h  fluxagent.h  gzipper.h  keyvalueparser.h  nodefileparser.h  openclhelper.h  output.h  parameters.h  pbsgpuparser.h  potential.h  rand.h  simulation.h  sourceagent.h  variable.h  world.h  writer.h
src/langmuirView/: CMakeLists.txt  axis.cpp  box.cpp  color.cpp  colorbutton.cpp  corneraxis.cpp  grid.cpp  gridview.cpp  isosurface.cpp  isosurfacedialog.cpp  langmuirview.cpp  langmuirviewer.cpp  light.cpp  mainwindow.cpp  mesh.cpp  pointcloud.cpp  pointdialog.cpp  sceneobject.cpp
src/langmuirView/forms/: isosurfacedialog.ui  mainwindow.ui  pointdialog.ui
src/langmuirView/icons/: icons.qrc
src/langmuirView/include/: axis.h  box.h  color.h  colorbutton.h  corneraxis.h  grid.h  gridview.h  isosurface.h  isosurfacedialog.h  langmuirviewer.h  light.h  mainwindow.h  mesh.h  pointcloud.h  pointdialog.h  sceneobject.h
src/langmuirView/shaders/: ccGeom.glsl  ccVert.glsl  msFrag.glsl  msTesC.glsl  msVert.glsl  mtFrag.glsl  mtVert.glsl  pcVert.glsl  scFrag.glsl  scGeom.glsl  shaders.qrc
src/test/: CMakeLists.txt  test.cpp
(+62 files in other folders)
