PROJECT(Langmuir)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.2)

SET(PROJECT_SOURCES
simulation.cpp
openclhelper.cpp
inputparser.cpp
logger.cpp
chargeagent.cpp
drainagent.cpp
sourceagent.cpp
rand.cpp
world.cpp
cubicgrid.cpp
fluxagent.cpp
potential.cpp
output.cpp
)

SET(PROJECT_HEADERS
parameters.h
world.h
fluxagent.h
drainagent.h
agent.h
chargeagent.h
inputparser.h
cubicgrid.h
logger.h
potential.h
openclhelper.h
rand.h
sourceagent.h
simulation.h
output.h
)

SET(PROJECT_MOC_HEADERS_1
agent.h
cubicgrid.h
inputparser.h
logger.h
openclhelper.h
potential.h
simulation.h
world.h
rand.h
output.h
)

SET(PROJECT_MOC_HEADERS_2
gridview.h
)

SET(PROJECT_FORMS
)

SET(PROJECT_RESOURCES
resources.qrc
)

SET(PROJECT_DATA
)

SET(QT_MIN_VERSION 4.7)
SET(QT_USE_QTOPENGL TRUE)
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
QT4_WRAP_CPP(PROJECT_MOC_HEADERS_PROCESSED_1 ${PROJECT_MOC_HEADERS_1})
QT4_WRAP_CPP(PROJECT_MOC_HEADERS_PROCESSED_2 ${PROJECT_MOC_HEADERS_2})
QT4_WRAP_UI(PROJECT_FORMS_PROCESSED ${PROJECT_FORMS})
QT4_ADD_RESOURCES(PROJECT_RESOURCES_PROCESSED ${PROJECT_RESOURCES})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-Wall -O2)

FIND_PACKAGE(Boost REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BOOST_PYTHON_INCLUDES})

FIND_PACKAGE(OpenCL REQUIRED)
INCLUDE_DIRECTORIES(${OPENCL_INCLUDE_DIRS})

FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIRS})

#ADD_EXECUTABLE(
#est
#test.cpp
#${PROJECT_SOURCES}
#${PROJECT_HEADERS}
#${PROJECT_MOC_HEADERS_PROCESSED_1}
#${PROJECT_FORMS_PROCESSED}
#${PROJECT_RESOURCES_PROCESSED}
#)

#TARGET_LINK_LIBRARIES(
#test
#${Boost_LIBRARIES}
#${QT_LIBRARIES}
#${OPENCL_LIBRARIES}
#)

ADD_EXECUTABLE(
langmuir
langmuir.cpp
${PROJECT_SOURCES}
${PROJECT_HEADERS}
${PROJECT_MOC_HEADERS_PROCESSED_1}
${PROJECT_FORMS_PROCESSED}
${PROJECT_RESOURCES_PROCESSED}
)

TARGET_LINK_LIBRARIES(
langmuir
${Boost_LIBRARIES}
${QT_LIBRARIES}
${OPENCL_LIBRARIES}
)

#ADD_EXECUTABLE(
#langmuirView
#langmuirview.cpp
#gridview.cpp
#${PROJECT_SOURCES}
#${PROJECT_HEADERS}
#${PROJECT_MOC_HEADERS_PROCESSED_1}
#${PROJECT_MOC_HEADERS_PROCESSED_2}
#${PROJECT_FORMS_PROCESSED}
#${PROJECT_RESOURCES_PROCESSED}
#)
#TARGET_LINK_LIBRARIES(
#langmuirView
#${Boost_LIBRARIES}
#${QT_LIBRARIES}
#${OPENCL_LIBRARIES}
#${OPENGL_LIBRARIES}
#)

